# blobby

./: README.md
blobby-py/: pyproject.toml
blobby-py/tests/: test_blobby_py.py
blobby-server/: Cargo.toml
blobby-server/src/: blob_traits.rs  file_handler.rs  hashmap_handler.rs  main.rs  types.rs
blobby-server/test-resources/: blob.msgpack  metadata.msgpack
