[package]
name = "blobby-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8", features = ["default", "json"] }
axum-msgpack = "0.2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_bytes = "0.11"
rmp-serde = "1.0.0"
anyhow = "1"
async-trait = "0.1.53"
uuid = { version = "0.8", features = ["v4"] }


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
